--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         }
         body {
             text-align: center;
-            background-color: goldenrod;
+            background-color: pink;
         }
         header {
-            background-color: #97560b;
+            background-color: green;
             color: white;
             padding: 40px 20px;
             font-size: 1.5em;
@@ -111,7 +111,7 @@
             height: 35px;
         }
         footer {
-            background: #97560b;
+            background: green;
             color: white;
             padding: 20px;
             font-size: 0.9em;
@@ -171,7 +171,7 @@
         }
         .order-now a {
             display: inline-block;
-            background-color: #25d366;
+            background-color: blue;
             color: white;
             padding: 15px 25px;
             font-size: 1.2em;
@@ -180,7 +180,7 @@
             font-weight: bold;
         }
         .order-now a:hover {
-            background-color: #1ebe57;
+            background-color: yellow;
         }
     </style>
 </head>
