--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <body>
     <header>
         <img src="logo.png" alt="Nusaiba's Sugar Art Logo" class="logo">
-        <h1>Nusaiba's Sugar Art</h1>
+        <h1>Saiba's Taste</h1>
     </header>
     <nav>
         <a href="#about">About</a>
