--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
         .order-now a:hover {
             background-color: yellow;
         }
+
+        @media screen and (max-width: 600px) {
+            nav {
+                flex-direction: column;
+            }
+            nav a {
+                padding: 10px;
+                font-size: 1em;
+            }
+            
+        }
     </style>
 </head>
 <body>
