--- a/index.html
+++ b/index.html
@@ -150,18 +150,7 @@
             font-weight: bold;
             font-size: 1.1em;
         }
-        .instagram-feed {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 50px;
-        }
-        .instagram-feed img {
-            width: 100px;
-            height: 100px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
+        
         .dark-mode {
             background-color: #2f3542;
             color: white;
@@ -230,7 +219,8 @@
         <a href="#menu">Menu</a>
         <a href="#contact">Contact</a>
         <a href="#testimonials">Testimonials</a>
-        <a href="#Contact">Contact</a>
+        <a href="#location">Location</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <div class="order-now">
@@ -281,7 +271,7 @@
             <span>- Isatu</span>
         </div>
     </section>
-    <section id="instagram">
+    <section id="location">
         <h2>Location</h2>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31709.01027841432!2d-13.115645301231866!3d8.360142902826893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xf037a16f6d6d3d3%3A0x5f9a8e1c621e6f80!2sJui%2C%20Sierra%20Leone!5e0!3m2!1sen!2ssl!4v1712134567890!5m2!1sen!2ssl" allowfullscreen="" loading="lazy"></iframe>
@@ -302,7 +292,7 @@
             <p><strong>Address:</strong> 01<sup>b</sup> Kobba Farm, Jui, Freetown, Sierra Leone</p>
         </div>
     </section>
-    <a href="https://wa.me/032752773" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/23232752773?text=Good%20afternoon%20Saiba%27s%20taste" class="whatsapp-button" target="_blank">
         <img src="images/whatsapp.jpg" alt="WhatsApp">
     </a>
 
