--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <p><strong>Address:</strong> 01<sup>b</sup> Kobba Farm, Jui, Freetown, Sierra Leone</p>
         </div>
     </section>
-    <a href="https://wa.me/23232752773?text=Good%20afternoon%20Saiba%27s%20taste" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/23232752773?text=Good%20day%20Saiba%27s%20Taste🎂🧁" class="whatsapp-button" target="_blank">
         <img src="images/whatsapp.jpg" alt="WhatsApp">
     </a>
 
